manifest/objects/ALTF__Account_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipName>Account_Opportunity_Division</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Altify Account Opportunities</relationshipLabel>
        <relationshipName>Account_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Is_Potential__c</fullName>
        <formula>IF(OR(ALTF__Opportunity__c = &apos;&apos;, ISNULL(ALTF__Opportunity__c)), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Type__c</fullName>
        <formula>IF( OR(ISBLANK(ALTF__Opportunity__c), ISNULL(ALTF__Opportunity__c)) ,&apos;Potential&apos;,  IF( ALTF__Opportunity__r.IsClosed , IF( ALTF__Opportunity__r.IsWon , &apos;Won&apos;, &apos;Lost&apos;), &apos;Current&apos; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Altify Account Opportunities</relationshipLabel>
        <relationshipName>Fndtn_Account_Opportunties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fndtn_Account_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Qualified_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Reporting_Amount__c</fullName>
        <description>Custom field allowing us to present a single amount field for reporting which can then be broken out by type.</description>
        <formula>IF (
        ALTF__Opportunity_Type__c == &apos;Potential&apos;,
        ALTF__Amount__c,
        ALTF__Opportunity__r.Amount
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Solution__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>AM Solution</label>
        <referenceTo>ALTF__Solution__c</referenceTo>
        <relationshipLabel>Altify Account Opportunities</relationshipLabel>
        <relationshipName>Account_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Was_Qualified__c</fullName>
        <formula>if(isblank(ALTF__Opportunity__c), false, if(OR(ALTF__Opportunity__r.CreatedDate &gt; CreatedDate, ALTF__Qualified_Flag__c == TRUE), true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Was Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Opportunity_Amount__c</fullName>
        <formula>IF (ALTF__Is_Potential__c = 0, Planned_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Amount__c</fullName>
        <formula>IF (
ALTF__Opportunity_Type__c == &apos;Potential&apos;,
ALTF__Amount__c,
ALTF__Opportunity__r.Altify_Reporting_Amount__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Amount__c</fullName>
        <formula>IF (ALTF__Is_Potential__c = 1, ALTF__Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qualified_Amount__c</fullName>
        <formula>IF (ALTF__Was_Qualified__c, Planned_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qualified_Type__c</fullName>
        <formula>IF (ALTF__Is_Potential__c = 1, &apos;Potential&apos;,
IF (ALTF__Was_Qualified__c, ALTF__Opportunity_Type__c + &apos; (Was Qualified)&apos;, ALTF__Opportunity_Type__c + &apos; (Not Qualified)&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Opportunity Type</label>
        <type>Text</type>
    </fields>
    <label>Altify Account Opportunity</label>
    <nameField>
        <label>Account Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>